--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav class="navigator">
-      <img src="./images/bread.png" style="height: 1.5rem" />
+      <img src="./images/bread.png" id="logo" />
     </nav>
     <header>
       <div class="caption">
@@ -19,6 +19,50 @@
         </h3>
       </div>
     </header>
-    <section id="main"></section>
+    <section id="main">
+      <div class="card">
+        <img src="./images/Bakery-1.jpeg">
+        <h3>Bakery One</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Unde, nam vero adipisci quasi quas eaque dolorem nesciunt 
+          rerum reiciendis blanditiis itaque et deleniti dicta sapiente 
+          pariatur voluptates earum laboriosam quae.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./images/Bakery-2.jpeg">
+        <h3>Bakery Two</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Unde, nam vero adipisci quasi quas eaque dolorem nesciunt 
+          rerum reiciendis blanditiis itaque et deleniti dicta sapiente 
+          pariatur voluptates earum laboriosam quae.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./images/Bakery-3.jpeg">
+        <h3>Bakery Three</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Unde, nam vero adipisci quasi quas eaque dolorem nesciunt 
+          rerum reiciendis blanditiis itaque et deleniti dicta sapiente 
+          pariatur voluptates earum laboriosam quae.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./images/Bakery-4.jpeg">
+        <h3>Bakery Four</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Unde, nam vero adipisci quasi quas eaque dolorem nesciunt 
+          rerum reiciendis blanditiis itaque et deleniti dicta sapiente 
+          pariatur voluptates earum laboriosam quae.
+        </p>
+      </div>
+    </section>
+    <footer>
+      <p>&copy; Bakery Contacts:<br />Taipei:&nbsp;(02)2577-8806 | Taichung:&nbsp;(04)2238-6572 | Tainan:&nbsp;(07)311-9568 </p>
+    </footer>
   </body>
 </html>
